Fix subdomain links for real this time

--- a/imports/ui/layouts/main.html
+++ b/imports/ui/layouts/main.html
@@ -21,9 +21,9 @@
 	</main>
 	<footer class="{{routeName}}">
 {{#if isFellow}}
-		<a href="//{{residentUrl}}">Resident site</a>
+		<a href="{{residentUrl}}">Resident site</a>
 {{else}}
-		<a href="//{{fellowUrl}}">Fellowship site</a>
+		<a href="{{fellowUrl}}">Fellowship site</a>
 {{/if}}
 		<nav>
 {{#unless routeIs "Home"}}
