Add breakdown/stats view for requests

--- a/client/main.scss
+++ b/client/main.scss
@@ -61,6 +61,7 @@ $fellowship-admin-border-color: $md-purple-900;
 
 $medium-mobile: 480px;
 $on-desktop: 768px;
+$small-desktop: 768px;
 $medium-desktop: 992px;
 $large-desktop: 1200px;
 
