--- a/imports/ui/templates/stats.html
+++ b/imports/ui/templates/stats.html
@@ -1,5 +1,5 @@
 <template name="stats">
 	<div>
-		{{>React component=RequestsStatsContainer }}
+		{{>React component=RequestsStats }}
 	</div>
 </template>
