--- a/imports/ui/templates/home.html
+++ b/imports/ui/templates/home.html
@@ -62,7 +62,7 @@
 <template name="requestedDate">
 	<div class="on-desktop">
 		<label for="daterange">Date</label>
-		<input type="text" name="requestedDate" id="daterange" placeholder="MM/DD/YYYY - MM/DD/YYYY" value="{{oldValue}}" autocomplete="off" />
+		<input type="text" name="requestedDate" id="daterange" placeholder="When you need off" value="{{oldValue}}" autocomplete="off" />
 	</div>
 	<div class="on-mobile">
 		<label for="start-date">Date</label>
