Color calendar event requests by status

--- a/client/main.scss
+++ b/client/main.scss
@@ -59,6 +59,13 @@ $chief-border-color: $md-lime-900;
 $fellowship-coordinator-border-color: $md-deep-purple-900;
 $fellowship-admin-border-color: $md-purple-900;
 
+$pending-background-color: #f0ad4e;
+$pending-border-color: #eea236;
+$approved-background-color: #5cb85c;
+$approved-border-color: #4cae4c;
+$denied-background-color: #d9534f;
+$denied-border-color: #d43f3a;
+
 $medium-mobile: 480px;
 $on-desktop: 768px;
 $small-desktop: 768px;
