Finish adding interns, needs a little more testing

--- a/client/main.scss
+++ b/client/main.scss
@@ -51,6 +51,7 @@ $residency-coordinator-role-color: $md-green-500;
 $chief-role-color: $md-lime-500;
 $fellowship-coordinator-role-color: $md-deep-purple-500;
 $fellowship-admin-role-color: $md-purple-500;
+$intern-coordinator-role-color: $md-cyan-500;
 
 $admin-border-color: $md-deep-orange-900;
 $location-admin-border-color: $md-yellow-900;
@@ -58,6 +59,7 @@ $residency-coordinator-border-color: $md-green-900;
 $chief-border-color: $md-lime-900;
 $fellowship-coordinator-border-color: $md-deep-purple-900;
 $fellowship-admin-border-color: $md-purple-900;
+$intern-coordinator-border-color: $md-cyan-900;
 
 $pending-background-color: #f0ad4e;
 $pending-border-color: #eea236;
