--- a/imports/ui/templates/usersList.html
+++ b/imports/ui/templates/usersList.html
@@ -54,6 +54,15 @@
 {{/each}}
 					</select>
 				</div>
+				<div class="form-group col-lg-3 col-md-3 col-sm-4">
+					<label for="phone">Phone</label>
+					<input type="tel"
+						class="form-control"
+						id="phone"
+						name="phone"
+						value="{{ user.phone }}"
+						placeholder="Phone number" />
+				</div>
 {{#if userIsChief user}}
 				<div class="form-group col-lg-3 col-md-3 col-sm-4">
 					<label for="pager">Pager</label>
