--- a/imports/ui/templates/locationsList.html
+++ b/imports/ui/templates/locationsList.html
@@ -48,7 +48,7 @@
 				</div>
 				<div class="form-group col-lg-3">
 					<label for="number">Number</label>
-					<input type="text" class="form-control" id="number" name="number" value="{{location.number}}" placeholder="Number" required />
+					<input type="text" class="form-control" id="number" name="number" value="{{location.number}}" placeholder="Number" />
 				</div>
 				<div class="form-group col-lg-3">
 					<label for="administrator">Administrator</label>
