--- a/imports/ui/templates/calendar.html
+++ b/imports/ui/templates/calendar.html
@@ -1,9 +1,11 @@
 <template name="calendar">
 {{#if eventDetails}}
-	<section class="event-details container">
-		{{>requestDetails request=eventDetails}}
+	<div class="event-details container">
+		<section class="request-details well well-lg">
+			{{>React component=RequestDetails request=eventDetails currentUser=currentUser}}
+		</section>
 		<button type="button" class="close-details-button btn btn-default" id="close-event-details">Close details</button>
-	</section>
+	</div>
 {{/if}}
 
 	<div class="calendar-container container">
