Show little inactive badge in users list

--- a/client/main.scss
+++ b/client/main.scss
@@ -16,6 +16,9 @@ $background-color: #fff;
 $background-color-darker: $md-blue-grey-100;
 $heading-background-color: #fff;
 
+$inactive-background-color: #d43f3a;
+$inactive-border-color: rgba(0, 0, 0, 0.55);
+
 $input-border-color: $md-blue-grey-700;
 $button-background-color: $md-blue-grey-500;
 $button-background-hover-color: $md-blue-grey-400;
