--- a/imports/ui/sass/layout/_users-list.scss
+++ b/imports/ui/sass/layout/_users-list.scss
@@ -24,6 +24,16 @@
 			tr {
 				cursor: pointer;
 
+				.inactive-badge {
+					display: block;
+					margin: 0 auto;
+					width: 1em;
+					height: 1em;
+					background: $inactive-background-color;
+					border: 1px solid $inactive-border-color;
+					border-radius: 50%;
+				}
+
 				td.role::before {
 					content: '';
 					display: inline-block;
