Make date inputs less hacky, should work on mobile

--- a/imports/ui/templates/home.html
+++ b/imports/ui/templates/home.html
@@ -54,27 +54,43 @@
 <template name="requestorEmail">
 	<div class="labelled-input">
 		<label for="email">Your email</label>
-		<input type="email" name="requestorEmail" id="email" placeholder="Your email" value="{{oldValue}}" autocomplete="off" required />
+		<input type="email" name="requestorEmail" id="email"
+			placeholder="Your email" value="{{oldValue}}"
+			autocomplete="off" required />
 	</div>
 	<button type="submit" class="btn btn-lg btn-primary">Next</button>
 </template>
 
 <template name="requestedDate">
+{{#if onMobile}}
+	<div class="on-mobile">
+		<label for="start-date">{{ startDateLabel }}</label>
+		<input type="date" name="requestedDate" id="start-date"
+			value="{{oldStartValue}}" placeholder="YYYY-MM-DD"
+			autocomplete="off" />
+	{{#if isRange}}
+		<label for="end-date">End date</label>
+		<input type="date" name="requestedEndDate" id="end-date"
+			placeholder="YYYY-MM-DD" value="{{oldEndValue}}"
+			min="{{startDate}}" autocomplete="off" />
+	{{/if}}
+	</div>
+{{else}}
 	<div class="on-desktop">
 		<label for="daterange">Date</label>
-		<input type="text" name="requestedDate" id="daterange" placeholder="When you need off" value="{{oldValue}}" autocomplete="off" />
+		<div>
+			{{>React component=Flatpickr name="requestedDate"
+				id="daterange" placeholder="When you need off"
+				value=oldValue autoComplete="off"
+				options=flatpickrConfig
+			}}
+		</div>
 	</div>
-	<div class="on-mobile">
-		<label for="start-date">Date</label>
-		<input type="date" name="requestedDate" id="start-date" data-end-date-element="#end-date" value="{{oldStartValue}}" placeholder="YYYY-MM-DD" autocomplete="off" />
-{{#if isRange}}
-		<label for="end-date">End date</label>
-		<input type="date" name="requestedEndDate" id="end-date" placeholder="YYYY-MM-DD" value="{{oldEndValue}}" min="{{startDate}}" autocomplete="off" />
 {{/if}}
-	</div>
 	<label id="multiple-days-label">
 		Multiple days?
-		<input type="checkbox" name="multiple-days" id="multiple-days" {{oldMultiple}} />
+		<input type="checkbox" name="multipleDays" id="multiple-days"
+			value="multiple" checked="{{oldMultiple}}" />
 	</label>
 	<button type="submit" class="btn btn-lg btn-primary">Next</button>
 </template>
