Make request reason required

--- a/imports/ui/templates/home.html
+++ b/imports/ui/templates/home.html
@@ -130,7 +130,7 @@
 </template>
 
 <template name="requestReason">
-	<textarea class="form-control" name="requestReason" id="reason" placeholder="Reason (optional)" autocomplete="off">{{oldValue}}</textarea>
+	<textarea class="form-control" name="requestReason" id="reason" placeholder="Reason (required)" autocomplete="off" required>{{oldValue}}</textarea>
 	<button type="submit" class="btn btn-lg btn-primary">Next</button>
 </template>
 
